  - Fix POT files breaking when using HTML::Tree 4.0.
  - Fix translated label missing from manually installed book. BZ #643781
  - Add icon.svg to Create Book. BZ #644105
  - Add XML dump options for site config.
  - Fix histroy typo
  - Stop max_image_width overriding XML width settings.
  - Decrease white space at top and bottom of PDF.
  - Fix toc links to refentry in chunked HTML. BZ #645602

2.2  Wed Oct 06 2010 
  - Extend callout graphics to 40; adjust colour and font BZ #629804
  - Make keycombo example consistent with RHEL6 behaviour. BZ #618735
  - Restrict CSS style for edition to title pages to avoid applying to bibliographies
  - Fix images/icon.svg breaking rpm build. BZ #612515
  - Fix empty term breaking PDF build. BZ #614728
  - Fix footnote not catching modified para. BZ #565903
  - Fix SRPM not including web labels. BZ #621036
  - Update tocs when home page is updated. BZ #612027
  - Don't display stats for unused languages. BZ #613500
  - Fix admonitions/varlistentry not having IDs. BZ #616112
  - Fix procedure/itemizedlist/orderedlist not having IDs. BZ #612817
  - Catch invalid revision in translation. BZ #621721
  - Limit index.html redirection to installed languages. BZ #612009
  - Fix smaller width being overridden by max_image_width. BZ #613140
  - Fix support for def_lang for web sites. BZ #622030
  - Remove ant trails from selected links.
  - Add --novalid option to disable validation when building. BZ #616142
  - Revert change to escaping ', ", >, <. BZ #628266
  - Add support for product and version splash pages. BZ #613502
  - Fix unused version breaking product hiding.
  - Add support for alerts for parameters.
  - Add bash completion.
  - Validate revnumber for changelog. BZ #628464
  - Add basic man page support. BZ #632027
  - Add basic support for line numbers. BZ #629463
  - Add warning messages for out of date translations.
  - Add productname to IGNOREBLOCKS. BZ #625316
  - Add OPDS support. BZ #615831