@@ -92,6 +92,7 @@
   - Stop max_image_width overriding XML width settings.
   - Decrease white space at top and bottom of PDF.
   - Fix toc links to refentry in chunked HTML. BZ #645602
+  - Fix bridgehead links not working in html. BZ #711348
 
 2.2  Wed Oct 06 2010 
   - Extend callout graphics to 40; adjust colour and font BZ #629804
